syntax = "proto3";
option java_package="fsm.miaad.stubs";

service GameService{
  //BiDirectional Streaming Model
  rpc game_BiDirectional_Streaming (stream GameCurrencyRequest) returns(stream GameCurrencyResponse);

  //server streaming model
  rpc BroadCastwinner_Server_Sreaming(stream GameCurrencyRequest) returns(stream GameCurrencyResponse);

}

message GameCurrencyRequest{
  int32 userid=1;
  int32 number=2;

}

message GameCurrencyResponse{
  string response=1;
  string winner=2;
  string message=3;
}



